Refactored to Add HandlerOptions

--- a/src/HealthServer/project.json
+++ b/src/HealthServer/project.json
@@ -1,4 +1,6 @@
 {
+    "title": "HealthServer",
+    "description": "A Middleware for Health checks",
   "version": "1.0.0-*",
 
     "dependencies": {
