Fixed Handler to not call next if writen. Fixed Namespaces

--- a/src/HealthServer/project.json
+++ b/src/HealthServer/project.json
@@ -6,7 +6,7 @@
     "packOptions": {
         "tags": [ "HealthCheck", "Health Check" ],
         "projectUrl": "https://github.com/MatthewKyle/HealthServer",
-        "licenseUrl": "https://github.com/MatthewKyle/HealthServer/blob/master/LICENSE",
+        "licenseUrl": "https://github.com/MatthewKyle/HealthServer/blob/master/LICENSE"
     },
     "version": "1.0.0-*",
 
